Fix spacing on mobile for search div

--- a/app/assets/stylesheets/components/posts.scss
+++ b/app/assets/stylesheets/components/posts.scss
@@ -85,7 +85,7 @@
 
       @include max-width(m) {
         padding-left: 0;
-        padding-top: 3em;
+        padding-top: 9em;
       }
     }
   }
